--- a/src/main/resources/public/src/scss/form/_variables.scss
+++ b/src/main/resources/public/src/scss/form/_variables.scss
@@ -1,159 +1,15 @@
 // Variables
 
-// font family
-$font-face-map: (
-  "NotoSansKR-Thin.otf":                      100,
-  "NotoSansKR-Light.otf":                     300,
-  "NotoSansKR-Regular.otf":                   400,
-  "NotoSansKR-Medium.otf":                    500,
-  "NotoSansKR-Bold.otf":                      700,
-  "NotoSansKR-Black.otf":                     900
-);
-$font-folder-path:                            "../fonts";
-$font-family:                                 "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
-
-// font size
-$font-size-base:                              1rem;  // 16px
-
-$icon-folder-path:                            "../media/icons/";
-$image-folder-path:                           "../media/images/";
-
-// color
-$black:                                       #000000;
-$white:                                       #ffffff;
-$red:                                         #FF405A;
-$orange:                                      #FF7319;
-$green:                                       #00C462;
-$focus-black:                                 #283238;
-$ground-black:                                #333D47;
-$light-black:                                 #3F4B56;
-$dark-gray:                                   #586872;
-$warm-gray:                                   #7E848C;
-$blue-gray:                                   #929AA6;
-$gray:                                        #ACB4BF;
-$pressed-gray:                                #CCCED1;
-$default-gray:                                #E1E3E6;
-$line-gray:                                   #EBEBEB;
-$light-gray:                                  #F7F8F9;
-$dark-blue:                                   #0060A5;
-$pressed-blue:                                #0088E6;
-$point-blue:                                  #0098FF;
-$hover-blue:                                  #33ADFF;
-$light-blue:                                  #87CEFF;
-
-// h1 ~ h5
-$h1-font-size:                                $font-size-base * 2.25; // 36px
-$h2-font-size:                                $font-size-base * 1.75; // 28px
-$h3-font-size:                                $font-size-base * 1.5;  // 24px
-$h4-font-size:                                $font-size-base * 1.25; // 20px
-$h5-font-size:                                $font-size-base;
-$h6-font-size:                                $font-size-base * 0.875; // 14px
-
-$headings-font-weight:                        500; // medium
-$headings-line-height:                        1.2; // normal
-$headings-color:                              $light-black;
-
-// input
-$input-font-size:                            $font-size-base;
-$input-font-weight:                          400; // regular
-$input-line-height:                          1.2; // normal
-$input-font-color:                                $dark-gray;
-
-$input-border:               0.0625rem solid $line-gray;
-$input-bg-color:             $white;
-$input-placeholder-color:    $gray;
-$input-focus-border:         0.0625rem solid $point-blue;
-$input-focus-box-shadow:     0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
-$input-pressed-border:       0.0625rem solid $point-blue;
-$input-disabled-color:       $gray;
-$input-disabled-bg-color:    $light-gray;
-$input-error-color:          $red !important;
-$input-error-border:         0.0625rem solid $red !important;
-
-// range
-$input-range-border-color:   $line-gray;
-$input-range-round-border:   0.0625rem solid $line-gray;
-$input-range-round-bg-color: $white;
-
-// textarea
-$textarea-font-size:         16px;
-$textarea-font-weight:       400; // regular
-$textarea-line-height:       1.2;
-$textarea-font-color:        $dark-gray;
-$textarea-border:            0.0625rem solid $line-gray;
-$textarea-bg-color:          $white;
-$textarea-placeholder-color: $gray;
-$textarea-focus-border:      0.0625rem solid $point-blue;
-$textarea-focus-box-shadow:  0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
-$textarea-pressed-border:    0.0625rem solid $point-blue;
-$textarea-disabled-color:    $gray;
-$textarea-disabled-bg-color: $light-gray;
-$textarea-error-color:       $red !important;
-$textarea-error-border:      0.0625rem solid $red !important;
-
-// select
-$select-font-size:           16px;
-$select-font-weight:         400; // regular
-$select-line-height:         24px;
-$select-font-color:          $dark-gray;
-$select-border:              0.0625rem solid $line-gray;
-$select-bg-color:            $white;
-$select-focus-border:        0.0625rem solid $point-blue;
-$select-focus-box-shadow:    0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
-$select-pressed-border:      0.0625rem solid $point-blue;
-$select-disabled-color:      $gray;
-$select-disabled-bg-color:   $light-gray;
-
 // label
-$label-font-size:            16px;
-$label-font-weight:          500; // medium
-$label-line-height:          24px;
-$label-font-color:           $light-black;
-$label-point-font-color:     $hover-blue;
-$label-ghost-font-color:     $white;
+$label-point-font-color:        $hover-blue;
+$label-ghost-font-color:        $white;
 
 // span
-$span-font-size:            16px;
-$span-font-weight:          400; // regular
-$span-line-height:          24px;
-//$span-font-color:           $light-black;
-
-// radio button 
-$radio-font-size:            16px;
-$radio-font-weight:          400; // regular
-$radio-line-height:          24px;
-$radio-font-color:           $dark-gray;
-$radio-border:               0.0625rem solid $line-gray;
-$radio-bg-color:             $white;
-$radio-focus-border-color:   $point-blue;
-$radio-focus-box-shadow:     0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
-$radio-pressed-color:        $point-blue;
-$radio-pressed-border-color: $line-gray;
-$radio-disabled-color:       $gray;
-$radio-disabled-bg-color:    $light-gray;
-
-// checkbox
-$checkbox-font-size:            16px;
-$checkbox-font-weight:          400; // regular
-$checkbox-line-height:          24px;
-$checkbox-font-color:           $dark-gray;
-$checkbox-border:               0.0625rem solid $line-gray;
-$checkbox-bg-color:             $white;
-$checkbox-focus-border-color:   $point-blue;
-$checkbox-focus-box-shadow:     0 0 0.3125rem 0 rgba(0, 152, 255, 0.2); // 흐림 5px
-$checkbox-pressed-color:        $point-blue;
-$checkbox-pressed-border-color: $line-gray;
-$checkbox-disabled-color:       $gray;
-$checkbox-disabled-bg-color:    $light-gray;
+$span-font-size:               1rem; // 16px
+$span-font-weight:             $font-weight-regular; // regular
 
 // table
-$table-font-size:            16px;
-$table-font-weight:          400; // regular
-$table-head-font-weight:     500; // medium
-$table-line-height:          24px;
-$table-font-color:           $dark-gray;
-$table-border:               0.0625rem solid $line-gray;
-$table-bg-color:             $white;
+$table-border-color:           $line-gray;
 
 // image
 $img-font-size:                 16px;
