--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -13,7 +13,7 @@
 </th:block>
 <body>
 <th:block layout:fragment="content">
-    <div class="container-document">
+    <div class="document-container">
         <div class="contents token-document">
             <div class="button-board-document">
                 <div class="numbering-content">
