--- a/src/main/resources/public/src/scss/form/_elements.scss
+++ b/src/main/resources/public/src/scss/form/_elements.scss
@@ -1,334 +1,31 @@
 @import "../template/_elements.scss";
 
-input {
-    font-size: $input-font-size;
-    line-height: $input-line-height;
-    font-weight: $input-font-weight;
-    color: $input-font-color;
-    border: $input-border;
-    background-color: $input-bg-color;
-    height: 2.5rem;
-    // 40px
-
-    &::placeholder {
-        color: $input-placeholder-color;
-    }
-
-    &:focus,
-    &:hover {
-        outline: 0;
-        border: $input-focus-border;
-        box-shadow: $input-focus-box-shadow;
-    }
-
-    &:disabled,
-    &:read-only {
-        color: $input-disabled-color;
-        background-color: $input-disabled-bg-color;
-        cursor: default;
-        pointer-events: none;
-    }
-
-    &.validate-error {
-        color: $input-error-color;
-        border: $input-error-border;
-    }
-}
-
 textarea {
-    font-size: $textarea-font-size;
-    line-height: $textarea-line-height;
-    font-weight: $textarea-font-weight;
-    color: $textarea-font-color;
-    border: $textarea-border;
-    background-color: $textarea-bg-color;
-    resize: none;
-    @include scrollbar-hidden;
-
-    &::placeholder {
-        color: $textarea-placeholder-color;
-    }
-
-    &:focus,
-    &:hover {
-        outline: 0;
-        border: $textarea-focus-border;
-        box-shadow: $textarea-focus-box-shadow;
-    }
-
-    &:disabled {
-        color: $textarea-disabled-color;
-        background-color: $textarea-disabled-bg-color;
-        cursor: default;
-    }
-
-    &.validate-error {
-        color: $textarea-error-color;
-        border: $textarea-error-border;
-    }
+  resize: none;
+  @include scrollbar-hidden;
 }
 
-select {
-    font-size: $select-font-size;
-    line-height: $select-line-height;
-    font-weight: $select-font-weight;
-    color: $select-font-color;
-    border: $select-border;
-    background-color: $select-bg-color;
-    height: 2.5rem; // 40px
-
-    &:focus,
-    &:hover {
-        outline: 0;
-        border: $select-focus-border;
-        box-shadow: $select-focus-box-shadow;
-    }
-
-    &:disabled {
-        color: $select-disabled-color;
-        background-color: $select-disabled-bg-color;
-        cursor: default;
-    }
-}
-
-.label,
 label {
-    font-size: $label-font-size;
-    line-height: $label-line-height;
-    font-weight: $label-font-weight;
-    color: $label-font-color;
+  &.point {
+    color: $label-point-font-color;
+  }
 
-    &.point {
-        color: $label-point-font-color;
-    }
-
-    &.ghost {
-        color: $label-ghost-font-color;
-    }
+  &.ghost {
+    color: $label-ghost-font-color;
+  }
 }
 
 span {
-    font-size: $span-font-size;
-    line-height: $span-line-height;
-    font-weight: $span-font-weight;
-    &[class="required"] {
-        padding-left: 0.3125rem; //5px
-        font-weight: 700;
-        &::after {
-            color: $red;
-            content: "\002a"; // *
-        }
-    }
-}
-
-label.radio-group {
-    position: relative;
-    font-size: $radio-font-size;
-    line-height: $radio-line-height;
-    font-weight: $radio-font-weight;
-    color: $input-font-color;
-    input[type=radio] {
-        display: none;
-        + span {
-            cursor: pointer;
-            &:before {
-                content: '';
-                display: inline-block;
-                border-radius: 50%;
-                border: $radio-border;
-                width: 1.125rem; // 18px
-                height: 1.125rem; // 18px
-                position: relative;
-                top: -0.0625rem; // -1px
-                margin-right: 0.3125rem; // 5px 
-                vertical-align: middle;
-                text-align: center;
-                background-color: $radio-bg-color;
-            }
-            &:after {
-                content: '';
-                position: absolute;
-                top: 2px;
-                left: 0;
-                width: 10px;
-                height: 10px;
-                border-radius: 50%;
-                background-color: transparent;
-            }
-            &:empty {
-                &:before {
-                    margin-right: 0;
-                }
-            }
-        }
-        &:checked {
-            + span {
-                &:before {
-                    border-color: $radio-pressed-border-color;
-                }
-                &:after {
-                    background-color: $radio-pressed-color;
-                    transform: translate(4px, 7px) scale(1);
-                }
-            }
-        }
-        &:focus,
-        &:hover {
-            + span {
-                &:before {
-                    border-color: $radio-focus-border-color;
-                    box-shadow: $radio-focus-box-shadow;
-                }
-            }
-        }
-        &:disabled {
-            + span {
-                color: $radio-disabled-color;
-                &:before {
-                    border-color: $radio-disabled-bg-color;
-                }
-                &:after {
-                    background-color: $radio-disabled-bg-color;
-                }
-            }
-        }
-    }
-    &:focus {
-        input[type=radio] {
-          + span {
-            &:before {
-              border-color: $point-blue;
-            }
-          }
-        }
-      }
-}
-
-label.checkbox-group {
-    font-size: $checkbox-font-size;
-    line-height: $checkbox-line-height;
-    font-weight: $checkbox-font-weight;
-    color: $checkbox-font-color;
-    input[type=checkbox] {
-        display: none;
-        + span {
-            position: relative;
-            cursor: pointer;
-            &:before {
-                content: '';
-                margin-right: 0.3125rem; // 5px
-                display: inline-block;
-                border-radius: 0.125rem; // 2px
-                border: $checkbox-border;
-                width: 1.125rem; // 18px
-                height: 1.125rem; // 18px
-                vertical-align: middle;
-                background-color: $checkbox-bg-color;
-            }
-            &:empty {
-                &:before {
-                    margin-right: 0;
-                }
-            }
-        }
-        &:checked {
-            + span {
-                &:after {
-                    content: '';
-                    position: absolute;
-                    top: 6px;
-                    left: 0;
-                    width: 12px;
-                    height: 6px;
-                    border: solid 2px $checkbox-pressed-color;
-                    border-right: none;
-                    border-top: none;
-                    transform: translate(3px, 4px) rotate(-45deg);
-                }
-            }
-        }
-        &:focus,
-        &:hover {
-            + span {
-                &::before {
-                    border-color: $checkbox-focus-border-color;
-                    box-shadow: $checkbox-focus-box-shadow;
-                }
-            }
-        }
-        &:disabled {
-            + span {
-                color: $checkbox-disabled-color;
-                &:before {
-                    background-color: $checkbox-disabled-bg-color;
-                }
-            }
-        }
-    }
-    &:focus {
-            input[type=checkbox] {
-              + span {
-                &:before {
-                  border-color: $point-blue;
-                }
-              }
-            }
-          }
-}
-
-input[type=range] {
-    -webkit-appearance: none;
-    width: 78%;
-    height: 0.0625rem; // 1px
-    background-color: $line-gray;
-    outline: 0;
-    &::-webkit-slider-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        border: $input-range-round-border;
-        border-radius: 50%;
-        background: $input-range-round-bg-color;
-        cursor: pointer;
-    }
-    &::-moz-range-thumb {
-        width: 1.125rem; // 18px
-        height: 1.125rem; // 18px
-        border: $input-range-round-border;
-        border-radius: 50%;
-        background: $input-range-round-bg-color;
-        cursor: pointer;
-    }
-    + input[type=text] {
-        width: 16%;
-        margin-left: 4%;
-        text-align: center;
-        padding: 0;
-        &:read-only {
-            color: $input-font-color;
-            background-color: $input-bg-color;
-        }
-    }
+  font-size: $span-font-size;
+  font-weight: $span-font-weight;
 }
 
 table {
-    font-size: $table-font-size;
-    line-height: $table-line-height;
-    font-weight: $table-font-weight;
-    color: $table-font-color;
-    border: $table-border;
-    background-color: $table-bg-color;
-    tr {
-        height: 2.5rem; // 40px
-        td,
-        th {
-            text-align: center;
-            vertical-align: middle;
-            border: $table-border;
-        }
-        th {
-            font-weight: $table-head-font-weight;
-        }
+  tr {
+    td, th {
+      text-align: center;
+      vertical-align: middle;
+      border-color: $table-border-color;
     }
+  }
 }
