--- a/src/main/resources/public/src/scss/template/_elements.scss
+++ b/src/main/resources/public/src/scss/template/_elements.scss
@@ -95,6 +95,11 @@ input {
     padding-right: 2.5rem; // 아이콘 크기만큼 들여 쓰기 40px
   }
 
+  &.error {
+    color: $element-error-font-color;
+    border: $element-error-border;
+  }
+
   &[type=range] {
     -webkit-appearance: none;
     appearance: none;
@@ -157,6 +162,11 @@ textarea {
     pointer-events: none;
     cursor: default;
   }
+
+  &.error {
+    color: $element-error-font-color;
+    border: $element-error-border;
+  }
 }
 // table
 table {
@@ -172,6 +182,10 @@ table {
 
   tr {
     height: 2.5rem; // 40px
+
+    th {
+      font-weight: $table-th-font-weight;
+    }
 
     td, th {
       border: $element-border-width solid transparent;
@@ -234,6 +248,9 @@ span {
 // label
 label {
   font-family: inherit;
+  color: $label-font-color;
+  font-size: $label-font-size;
+  font-weight: $label-font-weight;
 }
 // radio button
 .radio {
