--- a/src/main/resources/public/template/form/formCore.html
+++ b/src/main/resources/public/template/form/formCore.html
@@ -8,7 +8,7 @@
     <th:block layout:fragment="script"></th:block>
 </head>
 <body>
-    <div class="screen-wrapper">
+    <div class="alice-wrapper">
         <th:block layout:fragment="content"></th:block>
     </div>
 </body>
