--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <th:block layout:fragment="content">
-    <div class="container-print">
+    <div class="print-container">
         <div class="contents">
             <div class="print-board">
                 <img src="/assets/media/images/zenius.ico">
