--- a/src/main/resources/public/template/token/tokenPrint.html
+++ b/src/main/resources/public/template/token/tokenPrint.html
@@ -10,7 +10,7 @@
     <div class="print-container">
         <div class="contents">
             <div class="print-board">
-                <img src="/assets/media/images/zenius.ico">
+                <img src="/assets/media/images/zenius.ico" width="25" height="25">
                 <span id="printInfo"></span>
             </div>
             <div class="print-area">
