#8919 입력, 검색화면 열면 적당 위치에 포커싱 관련 일감 수정 진행

--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -88,8 +88,8 @@
     /*<![CDATA[*/
     window.onload = function() {
         i18n.init();
-
         hiddenProgressBar();
+        document.getElementById('userId').focus();
         fileUploader.avatar({
             extra: {
                 dropZoneFilesId: 'avatarDropZone',
