--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -107,6 +107,7 @@
         const sessionKey = 'code_expand_key';
 
         window.addEventListener('load', function() {
+            document.getElementById('search').focus();
             onCreate();
 
             function getCodeList() {
