--- a/src/main/resources/public/template/document/documentEdit.html
+++ b/src/main/resources/public/template/document/documentEdit.html
@@ -136,6 +136,7 @@
             });
 
             OverlayScrollbars(document.querySelector('.edit-content'), {className: 'scrollbar'});
+            document.getElementById('document-name').focus();
         };
 
         function saveDocument(method) {
