--- a/src/main/resources/public/template/portal/portalMain.html
+++ b/src/main/resources/public/template/portal/portalMain.html
@@ -71,6 +71,7 @@
         window.onload = function () {
             initEventListener();
             initPortalTops('get', '/rest/portal/top?limit=' + topSize);
+            document.getElementById('searchValue').focus();
         }
 
         /*
