--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -32,6 +32,7 @@
         /*<![CDATA[*/
         let offsetCount = 0;
         window.onload = function() {
+            document.getElementById('search').focus();
             getProcessList(document.getElementById('search').value, false);
         }
 
