--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -169,6 +169,7 @@
     <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
         window.onload = function() {
+            document.getElementById('userId').focus();
             fileUploader.avatar({
                 extra: {
                     dropZoneFilesId: 'avatarDropZone',
