--- a/src/main/resources/public/template/boardAdmin/boardAdminEdit.html
+++ b/src/main/resources/public/template/boardAdmin/boardAdminEdit.html
@@ -100,6 +100,7 @@
         let attachDisable = /*[[${boardAdmin?.attachYn}]]*/;
 
         window.onload = function() {
+            document.getElementById('boardAdminTitle').focus();
             if (!attachDisable && attachDisable !== null) {
                 document.getElementById('attachFileSize').disabled = 'false';
             }
