--- a/src/main/resources/public/template/boardAdmin/boardAdminSearch.html
+++ b/src/main/resources/public/template/boardAdmin/boardAdminSearch.html
@@ -39,6 +39,7 @@
         var offsetCount = 0;
         const offsetSize = 15;
         window.onload = function() {
+            document.getElementById('search').focus();
             document.getElementById('search').addEventListener('keyup', function() { getBoardAdminList(false); });
             getBoardAdminList(false);
         };
