--- a/src/main/resources/public/template/process/processImport.html
+++ b/src/main/resources/public/template/process/processImport.html
@@ -34,6 +34,7 @@
     <script type="text/javascript">
         /*<![CDATA[*/
         window.onload = function () {
+            document.getElementById('process_name').focus();
             fileUploader.init({
                 extra: {
                     formId: 'importProcess',
