--- a/src/main/resources/public/template/role/roleEdit.html
+++ b/src/main/resources/public/template/role/roleEdit.html
@@ -142,6 +142,7 @@
                 });
             }
 
+            document.getElementById('search').focus();
             document.getElementById('search').addEventListener('keyup', function() {
                 getRoleList(false);
             });
