--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -168,6 +168,7 @@
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
         window.onload = function() {
+            document.getElementById('userId').focus();
             fileUploader.avatar({
                 extra: {
                     dropZoneFilesId: 'avatarDropZone',
