--- a/src/main/resources/public/src/scss/form/_layout.scss
+++ b/src/main/resources/public/src/scss/form/_layout.scss
@@ -76,7 +76,7 @@
     padding: 0;
     margin: 0;
     overflow-y: auto;
-    @include scrollbar-hidden;
+    @include scrollbarHidden;
 
     .drawing-board {
       display: table;
@@ -123,7 +123,7 @@
     background-color: $form-aside-bg-color;
     box-shadow: $form-aside-box-shadow;
     overflow-y: auto;
-    @include scrollbar-hidden;
+    @include scrollbarHidden;
   }
 }
 
@@ -137,7 +137,7 @@
   margin: 0;
   background-color: $container-background-color;
   overflow: auto;
-  @include scrollbar-hidden;
+  @include scrollbarHidden;
 
   & *:focus {
     outline: none !important;
@@ -204,7 +204,7 @@
     padding: 0;
     margin: 0;
     overflow: auto;
-    @include scrollbar-hidden;
+    @include scrollbarHidden;
 
     .print-area {
       justify-content: center;
