--- a/src/main/resources/public/src/scss/process/_variables.scss
+++ b/src/main/resources/public/src/scss/process/_variables.scss
@@ -1,43 +1,10 @@
 // Variables
 
-// font family
-$font-face-map: (
-    "NotoSansKR-Thin.otf":                    100,
-    "NotoSansKR-Light.otf":                   300,
-    "NotoSansKR-Regular.otf":                 400,
-    "NotoSansKR-Medium.otf":                  500,
-    "NotoSansKR-Bold.otf":                    700,
-    "NotoSansKR-Black.otf":                   900
-);
-$font-folder-path:                            "../fonts";
-$font-family:                                 "Noto Sans KR", "맑은고딕", "Malgun Gothic", dotum, gulim, sans-serif;
-$font-size-base:                              1rem;  // 16px
+$element-readonly-font-color:                 $gray;
+$element-readonly-bg-color:                   $light-gray;
+$element-readonly-border-color:               $line-gray;
+$element-readonly-border-width:               0.0625rem; // 1px
 
-$icon-folder-path:                            "../media/icons/";
-$image-folder-path:                           "../media/images/";
-
-// color
-$black:                                       #000000;
-$white:                                       #ffffff;
-$red:                                         #FF405A;
-$orange:                                      #FF7319;
-$green:                                       #00C462;
-$focus-black:                                 #283238;
-$ground-black:                                #333D47;
-$light-black:                                 #3F4B56;
-$dark-gray:                                   #586872;
-$warm-gray:                                   #7E848C;
-$blue-gray:                                   #929AA6;
-$gray:                                        #ACB4BF;
-$pressed-gray:                                #CCCED1;
-$default-gray:                                #E1E3E6;
-$line-gray:                                   #EBEBEB;
-$light-gray:                                  #F7F8F9;
-$dark-blue:                                   #0060A5;
-$pressed-blue:                                #0088E6;
-$point-blue:                                  #0098FF;
-$hover-blue:                                  #33ADFF;
-$light-blue:                                  #87CEFF;
 
 $white: #fff;
 $process-toolbar-height: 3.125rem; // 50px
