--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -27,110 +27,112 @@
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
 </head>
 <body>
-<div class="alice-process-container">
-    <div class="alice-process-toolbar">
-        <span class="logo"></span>
-        <span class="process-designer">Process Designer</span>
-        <span class="separator"></span>
-        <th:block th:if="${#strings.isEmpty(isView)}">
-            <a href="#" id="btnSave">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_save.png}"/>
+<div class="alice-wrapper">
+    <div class="process-container">
+        <div class="process-toolbar">
+            <span class="logo"></span>
+            <span class="process-designer">Process Designer</span>
+            <span class="separator"></span>
+            <th:block th:if="${#strings.isEmpty(isView)}">
+                <a href="#" id="btnSave">
+                    <img th:src="@{/assets/media/icons/process/topmenu/icon_save.png}"/>
+                </a>
+            </th:block>
+            <a href="#" id="btnSaveAs">
+                <img th:src="@{/assets/media/icons/process/topmenu/icon_save_as.png}"/>
             </a>
-        </th:block>
-        <a href="#" id="btnSaveAs">
-            <img th:src="@{/assets/media/icons/process/topmenu/icon_save_as.png}"/>
-        </a>
-        <th:block th:if="${#strings.isEmpty(isView)}">
-            <a href="#" id="btnSimulation">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_simulation.png}"/>
+            <th:block th:if="${#strings.isEmpty(isView)}">
+                <a href="#" id="btnSimulation">
+                    <img th:src="@{/assets/media/icons/process/topmenu/icon_simulation.png}"/>
+                </a>
+                <a href="#" id="btnUndo">
+                    <img th:src="@{/assets/media/icons/process/topmenu/icon_undo.png}"/>
+                </a>
+                <a href="#" id="btnRedo">
+                    <img th:src="@{/assets/media/icons/process/topmenu/icon_redo.png}"/>
+                </a>
+            </th:block>
+            <a href="#" id="btnDownload">
+                <img th:src="@{/assets/media/icons/process/topmenu/icon_image_download.png}"/>
             </a>
-            <a href="#" id="btnUndo">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_undo.png}"/>
-            </a>
-            <a href="#" id="btnRedo">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_redo.png}"/>
-            </a>
-        </th:block>
-        <a href="#" id="btnDownload">
-            <img th:src="@{/assets/media/icons/process/topmenu/icon_image_download.png}"/>
-        </a>
-        <span class="process-name"></span>
-    </div>
-    <div class="alice-process-element-palette">
-        <span class="rectangle-menu shape event">
-            <label th:text="#{process.designer.element.event}"></label>
-        </span>
-        <span class="rectangle-menu shape task">
-            <label th:text="#{process.designer.element.task}">Task</label>
-        </span>
-        <span class="rectangle-menu shape subprocess">
-            <label th:text="#{process.designer.element.subprocess}">Subprocess</label>
-        </span>
-        <span class="rectangle-menu shape gateway">
-            <label th:text="#{process.designer.element.gateway}">Gateway</label>
-        </span>
-        <span class="rectangle-menu shape group">
-            <label th:text="#{process.designer.element.group}">Group</label>
-        </span>
-        <span class="rectangle-menu shape annotation">
-            <label th:text="#{process.designer.element.annotation}">Annotation</label>
-        </span>
-
-        <span class="rectangle-menu connector">
-            <label th:text="#{process.designer.element.connector}">Connector</label>
-        </span>
-        <span class="rectangle-menu move-icon" id="icon-move-drawingboard">
-            <label th:text="#{process.designer.element.background}">Background</label>
-        </span>
-    </div>
-    <div class="alice-process-drawing-board"></div>
-    <div class="alice-process-properties-panel">
-        <div class="properties-container">
-            <div class="element-title"><h2></h2></div>
-            <div class="element-properties"></div>
+            <span class="process-name"></span>
         </div>
-        <template id="process-info">
-            <div class="process-info-container">
-                <h3><span th:text="#{process.designer.attribute.processInformation}">Process Information</span></h3>
-                <div class="info">
-                    <div class="total">
-                        <span th:text="|#{process.designer.attribute.totalCount} : |">Total Count</span><span id="element_count"></span>
-                    </div>
-                    <table>
-                        <colgroup>
-                            <col width="60%">
-                            <col width="*">
-                        </colgroup>
-                        <tbody>
-                        <tr>
-                            <td th:text="#{process.designer.element.event}">Event</td>
-                            <td><label id="event_count"></label></td>
-                        </tr>
-                        <tr>
-                            <td th:text="#{process.designer.element.task}">Task</td>
-                            <td><label id="task_count"></label></td>
-                        </tr>
-                        <tr>
-                            <td th:text="#{process.designer.element.gateway}">Gateway</td>
-                            <td><label id="gateway_count"></label></td>
-                        </tr>
-                        <tr>
-                            <td th:text="#{process.designer.element.subprocess}">Subprocess</td>
-                            <td><label id="subprocess_count"></label></td>
-                        </tr>
-                        <tr>
-                            <td th:text="#{process.designer.element.connector}">Connector</td>
-                            <td><label id="connector_count"></label></td>
-                        </tr>
-                        <tr>
-                            <td th:text="#{process.designer.element.artifact}">Artifact</td>
-                            <td><label id="artifact_count"></label></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
+        <div class="process-element-palette">
+            <span class="rectangle-menu shape event">
+                <label th:text="#{process.designer.element.event}"></label>
+            </span>
+            <span class="rectangle-menu shape task">
+                <label th:text="#{process.designer.element.task}">Task</label>
+            </span>
+            <span class="rectangle-menu shape subprocess">
+                <label th:text="#{process.designer.element.subprocess}">Subprocess</label>
+            </span>
+            <span class="rectangle-menu shape gateway">
+                <label th:text="#{process.designer.element.gateway}">Gateway</label>
+            </span>
+            <span class="rectangle-menu shape group">
+                <label th:text="#{process.designer.element.group}">Group</label>
+            </span>
+            <span class="rectangle-menu shape annotation">
+                <label th:text="#{process.designer.element.annotation}">Annotation</label>
+            </span>
+
+            <span class="rectangle-menu connector">
+                <label th:text="#{process.designer.element.connector}">Connector</label>
+            </span>
+            <span class="rectangle-menu move-icon" id="icon-move-drawingboard">
+                <label th:text="#{process.designer.element.background}">Background</label>
+            </span>
+        </div>
+        <div class="process-drawing-board"></div>
+        <div class="process-properties-panel">
+            <div class="properties-container">
+                <div class="element-title"><h2></h2></div>
+                <div class="element-properties"></div>
             </div>
-        </template>
+            <template id="process-info">
+                <div class="process-info-container">
+                    <h3><span th:text="#{process.designer.attribute.processInformation}">Process Information</span></h3>
+                    <div class="info">
+                        <div class="total">
+                            <span th:text="|#{process.designer.attribute.totalCount} : |">Total Count</span><span id="element_count"></span>
+                        </div>
+                        <table>
+                            <colgroup>
+                                <col width="60%">
+                                <col width="*">
+                            </colgroup>
+                            <tbody>
+                            <tr>
+                                <td th:text="#{process.designer.element.event}">Event</td>
+                                <td><label id="event_count"></label></td>
+                            </tr>
+                            <tr>
+                                <td th:text="#{process.designer.element.task}">Task</td>
+                                <td><label id="task_count"></label></td>
+                            </tr>
+                            <tr>
+                                <td th:text="#{process.designer.element.gateway}">Gateway</td>
+                                <td><label id="gateway_count"></label></td>
+                            </tr>
+                            <tr>
+                                <td th:text="#{process.designer.element.subprocess}">Subprocess</td>
+                                <td><label id="subprocess_count"></label></td>
+                            </tr>
+                            <tr>
+                                <td th:text="#{process.designer.element.connector}">Connector</td>
+                                <td><label id="connector_count"></label></td>
+                            </tr>
+                            <tr>
+                                <td th:text="#{process.designer.element.artifact}">Artifact</td>
+                                <td><label id="artifact_count"></label></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </template>
+        </div>
     </div>
 </div>
 </body>
